Billing model buttons: Fix focus ring and alignment
Fix button alignments when they're wrapped for small screens, and fix a
bug where the focus wring of the button was wider than the button
itself.

Fixes https://issues.redhat.com/browse/SDA-1760

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -498,11 +498,14 @@ h1 .badged-resource-pf .badged-resource-pf-icon {
 }
 
 #billing-model.flat-radio-buttons-flex-container {
-  div, button {
-  min-width: 460px;
-  }
-  button {
+  button, div.ocm-flat-radio-button-disabled {
     height: 85px;
+    min-width: 460px;
+    margin-left: 0;
+    margin-right: 2em;
+    div { 
+      min-width: 444px;
+    }
   }
 }
 
